--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -1931,12 +1931,25 @@ func (e *entry) deliver(response chan<- result) {
     - **GOMAXPROCS**：Go调度器使用GOMAXPROCS参数来确定需要使用多少个OS线程来同时执行Go代码。`默认值是机器上的CPU数量`，所以在一个有8个CPU的机器上，调度器会把Go代码同时调度到8个OS线程上。（GOMAXPROCS是m:n调度中的n）正在休眠或者正被通道通信阻塞的goroutine不需要占用线程。阻塞在I/O和其它系统调用中或调用非Go语言写的函数的goroutine需要一个独立的OS线程，但这个线程不计算在GOMAXPROCS内。
     - **goroutine没有标识**：
 
+- go扩展包<http://godoc.org>
+
+- 包的查询
+    - $go list github.com/go-sql-driver/mysql //判断一个包是否存在于工作空间中
+    - $go list ... //用来匹配包的导入路径中的任意字串（导入路径所有可用包）
+    - $go list smakry.io/gospace/... //指定的子树的所有包
+    - $go list ...xml... //具体的主题可用包
+    - $go list -json hash //JSON格式输出每一个包的完整记录
+
 ### go test工具
 
 以_test.go结尾的文件不是go build命令编译的目标，而是go test编译的目标。在*_test.go文件中，三种函数需要特殊对待（功能测试函数、基准测试函数、示例函数）。`go test工具扫描*_test.go文件来寻找特殊函数，并生成一个临时的main包来调用它们，然后编译和运行，并汇报结果，最后清空临时文件。`
 - 功能测试函数：以`Test`前缀命名的函数，用来检测一些程序逻辑的正确性（go test运行测试函数）
 - 基础测试函数：以`Benchmark`开头的函数，用来测试某些操作的性能（go test汇报操作的平均时间）
 - 示例函数：以`Example`开头的函数，用来提供机器检查过的文档
+
+#### go test -v //选项-v可以输出包中每个测试用例的名称和执行时间
+#### go test -v -run="French|Non" //选项-run参数是一个正则表达式，匹配的模式函数运行
+#### go tool cover -html=c.out //测试覆盖率？
 
 ### 变量
 - `:=`省略var，左侧没有`声明新的变量`，产生编译错误（常用于初始化声明）
@@ -2105,3 +2118,41 @@ myMap = make(map[int]string) //创建集合，此时才能修改map
 - Go支持语言并发，通过go关键字开启goroutine
 - goroutine轻量级线程，调度由Golang运行时进行管理
 - goroutine两个之间传递通过channel（通道）
+
+### 包和工具
+
+- 正常以“最后一段”作为包名，但有例外：
+    - 如果包包含可行的Go程序（比如main函数），那么包名总是main。这是告诉go build的信号，它必须调用连接器生成可执行文件。
+    - _test.go结尾的测试文件
+    - 有一些依赖管理工具会在包导入路径的尾部追加版本号后缀（如："gopkg.in/yaml.v2",包名不包含后缀，所以包名是yaml）
+
+- 重命名导入（多个包的最后一段是一样的，避免冲突使用重命名）
+
+```go
+import (
+	"crypto/rand"
+
+	mrand "math/rand" //通过mrand重新命名math/rand包，仅影响当前文件
+)
+```
+
+- 未使用的导入错误可用空白导入。导入未使用的包的目的，仅仅是为了使用其副作用，对包级别的变量执行初始化表达式求值，并执行它的init函数
+
+```go
+imoprt (
+	_ "math"
+)
+```
+
+```go
+//database/sql包让用户按需加入想要的数据库驱动程序，应用只需要空白导入所需包
+import (
+	"database/sql"
+	_ "github.com/lib/pg"				//添加Postgres支持
+	_ "github.com/go-sql-driver/mysql"	//添加mysql支持
+)
+
+db, err = sql.Open("postgres", dbname)	//ok
+db, err = sql.Open("mysql", dbname)		//ok
+db, err = sql.Open("sqlite3", dbname)	//错误，unknown driver "sqlite3"
+```
