--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -1942,14 +1942,22 @@ func (e *entry) deliver(response chan<- result) {
 
 ### go test工具
 
-以_test.go结尾的文件不是go build命令编译的目标，而是go test编译的目标。在*_test.go文件中，三种函数需要特殊对待（功能测试函数、基准测试函数、示例函数）。`go test工具扫描*_test.go文件来寻找特殊函数，并生成一个临时的main包来调用它们，然后编译和运行，并汇报结果，最后清空临时文件。`
-- 功能测试函数：以`Test`前缀命名的函数，用来检测一些程序逻辑的正确性（go test运行测试函数）
-- 基础测试函数：以`Benchmark`开头的函数，用来测试某些操作的性能（go test汇报操作的平均时间）
-- 示例函数：以`Example`开头的函数，用来提供机器检查过的文档
+以_test.go结尾的文件不是go build命令编译的目标，而是go test编译的目标。在*_test.go文件中，三种函数需要特殊对待（功能测试函数、基准测试函数、示例函数）。go test工具扫描*_test.go文件来寻找特殊函数，并生成一个临时的main包来调用它们，然后编译和运行，并汇报结果，最后清空临时文件。
 
-#### go test -v //选项-v可以输出包中每个测试用例的名称和执行时间
-#### go test -v -run="French|Non" //选项-run参数是一个正则表达式，匹配的模式函数运行
-#### go tool cover -html=c.out //测试覆盖率？
+1. 功能测试函数：以`Test`前缀命名的函数，用来检测一些程序逻辑的正确性（go test运行测试函数）  
+2. 基准测试函数：以`Benchmark`开头的函数，用来测试某些操作的性能（go test汇报操作的平均时间）(峰值测试？)  
+3. 示例函数：以`Example`开头的函数，用来提供机器检查过的文档（没有参数也没有结果，作为示例文档说明）   
+
+#
+- go test -v //选项-v可以输出包中每个测试用例的名称和执行时间
+- go test -v -run="French|Non" //选项-run参数是一个正则表达式，匹配的模式函数运行
+- go tool cover -html=c.out //测试覆盖率？
+- go test -bench=. -benchmen //基准测试，选项-bench指定是基准测试，.表示包中所有的基础测试函数,-benchmen在报告中包含内存分配统计数据
+- 性能剖析：通过自动化手段`在程序执行过程中基于一些性能事件的采样`来进行性能评测，然后再从这些采样中推断分析，得到的统计报告就称为性能剖析：
+    - CPU性能剖析：识别出执行过程中需要CPU最多的函数，在每个CPU上面执行的线程都每隔几毫秒会定期地被操作系统中断，在每次中断过程中记录一个性能剖析事件，然后恢复正常执行。
+    - 堆性能剖析：识别出负责分配最多内存的语句。性能剖析库对协程内部内存分配调用进行采样，因此每个性能剖析事件平均记录了分配的512KB内存
+    - 阻塞性能剖析：识别出那些阻塞协程最久的操作，例如系统调用，通道发送和接收数据以及获取锁等，性能分析库在一个goroutine每次被上述操作之一阻塞的时候记录一个事件 
+
 
 ### 变量
 - `:=`省略var，左侧没有`声明新的变量`，产生编译错误（常用于初始化声明）
@@ -2155,4 +2163,98 @@ import (
 db, err = sql.Open("postgres", dbname)	//ok
 db, err = sql.Open("mysql", dbname)		//ok
 db, err = sql.Open("sqlite3", dbname)	//错误，unknown driver "sqlite3"
+```
+
+### 反射
+
+- reflect.TypeOf函数接受任何的interface{}参数，并把接口中的`动态
+- 类型`以reflect.Type形式返回
+- reflect.ValueOf函数接受任意类型的interface{}并将接口的`动态值`以reflect.Value形式返回
+- 调用Value的Type方法会把它的类型以reflect.Type方式返回
+
+```go
+func main() {
+	t := reflect.TypeOf(3)
+	fmt.Println(t.String()) //int
+	fmt.Println(t) //int
+	var w io.Writer = os.Stdout
+	fmt.Println(reflect.TypeOf(w)) //*os.File
+
+	v := reflect.ValueOf(3)
+	fmt.Println(v) //3
+	fmt.Printf("%v\n", v) //3
+	fmt.Println(v.String()) //<int Value>
+	fmt.Println(v.Type()) //int
+
+	x := v.Interface() //reflect.ValueOf的逆操作，返回interface{}接口值
+	i := x.(int)
+	fmt.Printf("%d\n", i)
+}
+```
+
+### 低级编程
+
+- 函数unsafe.Sizeof同c的sizeof返回参数在内存中占用的字节长度
+
+```go
+import (
+	"fmt"
+	"unsafe"
+)
+
+func main() {
+	fmt.Println(unsafe.Sizeof(float64(0)))
+}
+```
+
+- 为了可移植性，将以字来表示引用类型的长度。`在32位操作系统上，字的长度是4个字节，在64位系统上，字的长度是8个字节。`（内存对齐问题？）
+
+类型								|大小
+bool							|1个字（c++中一个字节）
+intN、uintN、floatN、complexN	|N/8字节（例如float64是8字节，此处是字节）
+int、uint、uintptr				|1个字
+*T								|1个字
+string							|2个字（数据、长度）
+[]T								|3个字（数据、长度、容量）
+map								|1个字
+func							|1个字
+chan							|1个字
+interface						|2个字（类型、值）
+
+- 语言规范并没有要求成员声明的顺序对应内存中的布局顺序，理论上编译器可以自由安排。但正常不这样做，如果结构体成员的类型是不同的，那么将存在相同类型的成员定义在一起可以更节约内存空间。例如下面三个结构体成员相同但内存占用不同（内存对齐）：
+
+定义								| 64位	|32位
+struct{ bool; float64; int16 }	|3个字	|4个字
+struct{ float64; int16; bool }	|2个字	|3个字
+struct{ bool; int16; float64 }	|2个字	|3个字
+
+- unsace.Alignof报告它参数类型所要求的对齐方式。和Sizeof一样，它的参数可以是任意类型的表达式，并且返回一个常量。典型地，布尔类型和数值类型对齐到它们的长度（最大8个字节），而其他的类型则按字对齐
+
+```go
+type TypeNew struct {
+	b	bool
+	f	float64
+	i	int
+}
+
+func main() {
+	a := TypeNew{false, 10.0, 0}
+	fmt.Println(unsafe.Alignof(a)) //8
+}
+```
+
+- unsafe.Offsetof计算成员f相对于结构体x起始地址的偏移值，如果有内存空位也计算在内，该函数的操作数必须是一个成员选择器x.f
+
+```go
+type TypeNew struct {
+	b	bool
+	f	float64
+	i	int
+}
+
+func main() {
+	a := TypeNew{false, 10.0, 0}
+	fmt.Println(unsafe.Offsetof(a.i)) //16
+}
+
 ```
