--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -2192,6 +2192,8 @@ func main() {
 }
 ```
 
+- 深度相等：包reflect中的DeepEqual函数用来报告2个`变量的值`是否“深度”相等。DeepEqual函数对基本类型使用内置的==操作符进行比较，对于组合类型它逐层深入比较相应的元素（递归）。
+
 ### 低级编程
 
 - 函数unsafe.Sizeof同c的sizeof返回参数在内存中占用的字节长度
@@ -2210,7 +2212,7 @@ func main() {
 - 为了可移植性，将以字来表示引用类型的长度。`在32位操作系统上，字的长度是4个字节，在64位系统上，字的长度是8个字节。`（内存对齐问题？）
 
 类型								|大小
-bool							|1个字（c++中一个字节）
+bool							|1个字节
 intN、uintN、floatN、complexN	|N/8字节（例如float64是8字节，此处是字节）
 int、uint、uintptr				|1个字
 *T								|1个字
@@ -2257,4 +2259,32 @@ func main() {
 	fmt.Println(unsafe.Offsetof(a.i)) //16
 }
 
+```
+
+- unsafe.Pointer类型指针可以存储任何变量的地址。`但无法间接地通过一个unsafe.Pointer变量使用*p`（uintptr也可以表示任何地址，但uintptr可以间接的访问*p，因为保存了指针指向地址的数值），因为不知道这个表达式的具体类型。一个普通的指针 *T可以转换为unsafe.Pointer类型的指针，另外一个unsafe.Pointer类型的指针也可以转换回普通指针，而且可以不必和原来的类型*T相同。例如通过转换一个*float64类型的指针到*uint64类型
+
+```go
+func Float64bites(f float64) uint64 {
+	return *(*uint64)(unsafe.Pointer(&f))
+}
+fmt.Printf("%#016x\n", Float64bites(1.0)) //0x3ff0000000000000
+```
+
+- 移动的垃圾回收器
+
+```go
+var x struct {
+	a	bool
+	b	int16
+	c	[]int
+}
+
+pb := (*int16)(unsafe.Pinter(uintptr(unsafe.Pointer(&x)) + unsafe.Offsetof(x.b)))
+*pb = 42
+fmt.Println(x.b) //42
+
+//以下的方式错误，移动垃圾回收，导致tmp可能已经不是原始的&x
+tmp := uintptr(unsafe.Pointer(&x)) + unsafe.Offsetof(x.b)
+pb :=  (*int16)(unsafe.Pointer(tmp))
+*pb = 42
 ```
