--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -1037,6 +1037,12 @@ func main() {
 
 - interface{} (空接口`类型`，它也是一种类型)，可以表示任何类型（接口的零值就是把它的动态类型的和值都设置为nil）  
 
+```go
+	var x interface{} = 10
+	fmt.Printf("%v, %[1]T\n", x.(int)) //10, int  直接断言x是int类型
+```
+
+
 - 使用flag.Value来解析参数（设置全局falg值period2，flag.Parse()接收命令行参数，操作flag值）
 
 ```go
@@ -1587,7 +1593,7 @@ func main() {
      - func test(c chan<- int) //c是一个单向通道，仅允许发（通过<-指向的chan记忆）
      - func test(c <-chan int) //c是一个单向通道，仅允许收
 
-- 缓冲通道（make的第2个参数指定缓冲大小），缓冲通道实际上是一个队列。当队列满了以后通道一样阻塞
+- 缓冲通道（make的第2个参数指定缓冲大小，eg：make(chan int, 5)），缓冲通道实际上是一个队列。当队列满了以后通道一样阻塞
 
 - 并行循环
 
@@ -2167,8 +2173,7 @@ db, err = sql.Open("sqlite3", dbname)	//错误，unknown driver "sqlite3"
 
 ### 反射
 
-- reflect.TypeOf函数接受任何的interface{}参数，并把接口中的`动态
-- 类型`以reflect.Type形式返回
+- reflect.TypeOf函数接受任何的interface{}参数，并把接口中的`动态类型`以reflect.Type形式返回
 - reflect.ValueOf函数接受任意类型的interface{}并将接口的`动态值`以reflect.Value形式返回
 - 调用Value的Type方法会把它的类型以reflect.Type方式返回
 
