--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -302,7 +302,8 @@ func main(){
     - map的`键类型必须是可以通过操作符==来进行比较的数据类型`，虽然浮点型可以，但是浮点存在数据有效范围如float32只能精确到1<<24。
     - map中ages["bob"] = ages["bob"] + 1 //当键bob不在map中，这是安全的，`键不存在查找返回的是类型的零值`
     - map`元素`不是一个变量（map类型本身是一个变量），不可以获取它的地址如 _ = &ages["bob"] //编译错误  
-    - map中元素迭代是顺序是随机的，取决于散列算法，若需要有序迭代，需通过排序key  
+    - map中元素迭代是顺序是随机的，取决于散列算法，若需要有序迭代，需通过排序key
+    - delete(map, 键) //键删除方式   
 
 
 ```go
@@ -1057,7 +1058,7 @@ func main() {
 ```
 
 - 接口**值**`可以用==和！=操作符来做比较`，如果两个接口值都是nil或者二者的动态类型完全一致且二者动态值相等（使用动态类型的==操作符来做比较），那么两个接口值相等（能比较就能作为map的键）。但需注意接口类型一致，但是值是不可比较的会导致崩溃（不矛盾）  
-- 部分数据类型要转成声明类型是因为声明的类型包含额外的方法（如rune？）
+- 部分数据类型要转成声明类型是因为声明的类型包含额外的方法
 - sort.Sort(data Interface)是接口的一个应用，类型实现了接口方法即可用于排序
 
 ```go
@@ -1614,7 +1615,7 @@ func handleFile(filenames []string) {
 ```
 
 ```go
-//计数器sync.WaitGroup
+//计数器sync.WaitGroup（Add增加计数，Done减少计数，wait等待计数=0继续往下执行）
 func makeThumnail(filenames <-chan string) int64 {
 	sizes := make(chan int64)
 	var wg sync.WaitGroup
@@ -1770,7 +1771,7 @@ var loadIconsOnce sync.Once
 var icons map[string]image.Image
 
 func Icon(name string) image.Image {
-	loadIconsOnce.Do(loadIcons)
+	loadIconsOnce.Do(loadIcons) //loadIcons是icons初始化方法
 	return icons[name]
 }
 ```
