--- a/_posts/2019-09-24-C++STL.md
+++ b/_posts/2019-09-24-C++STL.md
@@ -126,7 +126,7 @@ int main(){
 ### <span id = "list_2"></span>红黑树（从头黑到底，一齐黑，红色儿子都是黑色的）  
 
 `横向`看树（层）
-满二叉树：除叶子节点外，每个节点都有左和右两个节点  
+满二叉树：除叶子节点外，每个节点都有左和右两个节点（国内的满二叉树还需要子节点都在同一层）  
 完全二叉树：最后一层没满，其余层数节点都是满的2^(k-1)个，k为层（满二叉树是特殊的完全二叉树，反过来不一定成立）  
 
 `纵向`看树（竖）  
