--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -138,7 +138,7 @@ func main(){
 - int不等同于int32，uint不等同uint32（在特定平台是相等的，或者是该平台上的运算效率最高的值，但不同硬件平台或者不同编译器大小是不一定的）
 - go中取模余数的正负号总是与被除数一致（-5%3和-5%-3都是-2）  
 - &^操作符，按位将右边二进制1的位在左边出现的置0   
-- 十进制下，float32有效小数大约6位，float64小数大约15位。绝大多数情况下应优先选用float64，float32能精确表示的正整数范围有限：  
+- 十进制下，float32有效小数大约6位，float64小数大约15位。绝大多数情况下应优先选用float64（其它语言的double？），float32能精确表示的正整数范围有限：  
 
 ```go
 var f float32 = 16777211
