--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -234,6 +234,7 @@ const(
     - 判断slice是不是为空不能用== nil因为 s = []int{}用== nil返回是false但实际是空，需用len() == 0判定  
     - make([]T,len,cap) 和make([]T,cap)[:len]二者等价（注意cap位置）  
     - append方式类似c++中verctor的动态扩容方式（`内存地址变化了`）  
+    - s1 = append(s1[0:3], s2[:]...) //s1保留0 ~ 2这3个数据，`剩余数据全部弃用`，然后追加s2的所有元素  
 
 ```go
 arr := [...]string{"Sunday","Monday","Tuesday","Wednesday","Thursday","Firday","Saturday","",""}
@@ -261,7 +262,7 @@ fmt.Println(len(day),cap(day)) //报错
 func main(){
     s1 := []int{1,2,3,4,5,6,7}
 
-	s1 = append(s1[:3],s1[4:]...) //切片s1重新赋值只有原始切片的6个长度
+	s1 = append(s1[:3],s1[4:]...) //切片s1重新赋值只有原始切片的6个长度（注意重赋值部分）
 	fmt.Printf("%d,%d,%d,%p\n",s1,len(s1),cap(s1),s1) //[1 2 3 5 6 7],6,7,0xc00001e080
 }
 
