--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -153,6 +153,7 @@ fmt.Println(nan == nan,nan < nan,nan > nan) //"false false false"比较总是不
 
 - go的bool值只有true和false，0和1不能隐式转成false和true，反之也不行  
 - 字符串可以追加`不能修改`如 s := "left foot" 可以 s += ",right foot" 但s[0] = 'L'编译错误。不能重赋值，代表原始串的字串可以共用原始串的内存地址（不需要重新分配内存） 
+- 字符串使用下标索引获取的是编码对应的值（不一定是ascii码，要看具体的字符，但`rune可存下所有`）   
 - Printf格式化字符含多个%谓词，原本要求提供相应数量的操作数，而%后的副词[1]告知Printf重复使用第1个操作数，其次副词#告知Printf输出相应的前缀  
 
 ```go
@@ -199,9 +200,12 @@ fmt.Printf("%d %#o %#[2]x\n",o,o) //重复使用第2个操作数
 5	','	44
 6	' '	32
 7	'世'	19990
-10	'界'	30028 //返回的索引直接字符的起始索引
+10	'界'	30028 //返回的索引直接字符的起始索引（注意不是连续）
 */
 
+	a := "aaa时空裂缝就阿卡"
+	b := []rune(a)
+	fmt.Println(string(b[3])) //输出：时
 ```
 
 - const iota = 0 // Untyped int  
@@ -225,6 +229,7 @@ const(
 - 函数调用，参数都会创建一个副本（不同于其它语言的引用），这样就会拷贝一次值（`指针、slice、map函数和通道channel也是值拷贝`，只是包含了引用类型或者是可以通过包含的类型修改实参值。例如slice包含指向底层数组的指针，这就能改变到底层数组）
 - q := [...]int{1,2,3}省略号“...”出现在数组长度的位置，表示输出长度由初始化的元素个数决定    
 - r := [...]int{9:-1} 定义10个数据，最后一个数据的值是-1，其余默认值0。由最大的index决定
+- mapArr := [...][4]int{{3, 3, 4, 6}, {3, 3, 4, 6}, {3, 3, 4, 6}, {3, 3, 4, 6}} //二维数组同其它需指定第2维度长度  
 - 数组是可以比较（`数据类型`跟`元素个数`一致的情况下才能比较，比较的是元素值。不同类型或不同元素个数比较会编译错误）  
 - 切片slice有3个属性指针、长度和容量。（切片，即可视作是数组的一个`子片的引用`）
     - 指针是指向该切片的第1个元素（`并非底层的数组的首元素`）
