--- a/_posts/2019-09-11-网络阅读笔记.md
+++ b/_posts/2019-09-11-网络阅读笔记.md
@@ -184,4 +184,20 @@ TCP Reno的实现是：
 1.当用户浏览使用Cookie的网站的时候，如果是第一次浏览则网站的服务器会为用户生成一个唯一的ID，`并用这个ID作为索引`在后台服务器数据库中生成一条记录用来标识此用户。  
 2.然后服务器把当前的用户ID添加到http的响应报文发送给浏览器，当浏览器收到这个响应报文之后，就会在它的`Cookie文件中添加一行`，包括服务器的主机名还有这个用户的ID。  
 3.之后当用户通过浏览器继续访问这个网站的时候，浏览器都会从Cookie文件中`取出用户的ID放在http请求中发送给服务器`，服务器利用用户的ID查找数据库就可以得到用户之前的访问记录。 
- 
+
+### Session原理
+
+Session与cookie功能效果相同，记录客户状态的机制，区别在于session是`记录在服务端`的，而cookie是记录在客户端。当访问服务器某个网页的时候，会在服务器的内存里开辟一块内存，`这块内存`的就叫做session，而这块内存是跟浏览器关联在一起的，这个浏览器指的是浏览器窗口，`只允许当前这个session对应的浏览器访问`，就算是同一机器上新启的浏览器也是无法访问的，而另外一个浏览器也需要记录session的话就会再启一个属于自己的session。  
+
+1.**原理**：HTTP协议是非连接性的，取完当前浏览器的内容，然后关闭浏览器后，链接就断开了，而没有任何机制去记录取出后的信息，而当需要访问一个网站的另外一个页面时（比如第一个页面选择购买的商品，跳转到第二个页面去进行付款）这个时候取出来的信息就读不出来了。  
+
+2.**解决唯一性问题**：浏览器和服务器的session如何一一对应？当访问一个页面的时候给网页创建一个独一无二的号码，在打开同一个网站的第二个页面时获取到第一个页面中session保留下来的信息（访问第二个页面时同时将session传递过去，访问时在服务器找到同一个session即能取到第一个页面信息）  
+
+3.**session两种实现方式**（即传递方式）：  
+
+- 把session的id放在cookie里面（因为cookie有临时的，也有定时的，临时的就是当前浏览器什么时候关掉即消失，也就是说session本来就就是当浏览器关闭即消失，所以可以用临时的cookie存放，保存在cookie里面的sessionID是独一无二的），当允许浏览器使用cookie的时候session依赖于cookie，当浏览器不支持cookie时通过第二种方式
+- 不支持cookie自己编程使用URL重写的方式实现（正常是需要同时使用，如果浏览器不支持cookie呢）。重写URL通过encodeURL（encodeURL的第一个作用是转码，第二个作用是在url之后加入sessionID）
+
+4.**session有效期**：session为服务器的内存，为防止内存溢出，服务器会把长时间内没有活跃的session从内存删除，这个时间就是session的超时时间（可以设置），如果超过这个时间没有再次访问服务器，session失效被删除。    
+
+5.**session能干什么**：session就是服务器的一块内存，内存里面能放任何东西，只要是名值对就可以，session里面的`名字永远都是String类型`。
