--- a/_posts/2019-09-11-网络阅读笔记.md
+++ b/_posts/2019-09-11-网络阅读笔记.md
@@ -195,8 +195,8 @@ Session与cookie功能效果相同，记录客户状态的机制，区别在于s
 
 3.**session两种实现方式**（即传递方式）：  
 
-- 把session的id放在cookie里面（因为cookie有临时的，也有定时的，临时的就是当前浏览器什么时候关掉即消失，也就是说session本来就就是当浏览器关闭即消失，所以可以用临时的cookie存放，保存在cookie里面的sessionID是独一无二的），当允许浏览器使用cookie的时候session依赖于cookie，当浏览器不支持cookie时通过第二种方式
-- 不支持cookie自己编程使用URL重写的方式实现（正常是需要同时使用，如果浏览器不支持cookie呢）。重写URL通过encodeURL（encodeURL的第一个作用是转码，第二个作用是在url之后加入sessionID）
+- `把session的id放在cookie里面`（因为cookie有临时的，也有定时的，临时的就是当前浏览器什么时候关掉即消失，也就是说session本来就就是当浏览器关闭即消失，所以可以用临时的cookie存放，保存在cookie里面的sessionID是独一无二的），当允许浏览器使用cookie的时候session依赖于cookie，当浏览器不支持cookie时通过第二种方式
+- 不支持cookie自己编程`使用URL重写的方式`实现（正常是需要同时使用，如果浏览器不支持cookie呢）。重写URL通过encodeURL（encodeURL的第一个作用是转码，第二个作用是在url之后加入sessionID）
 
 4.**session有效期**：session为服务器的内存，为防止内存溢出，服务器会把长时间内没有活跃的session从内存删除，这个时间就是session的超时时间（可以设置），如果超过这个时间没有再次访问服务器，session失效被删除。    
 
