--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -14,7 +14,7 @@ tags: GO 阅读笔记
 
 ## Go笔记
 
-Go强类型化的语言，具有垃圾回收机制，并显示支持并编程，Go原生地支持Unicode，可以处理所有国家的语言。Go静态类型语言，类型仅仅是一个编译时的概念。  
+Go强类型化的语言，具有垃圾回收机制，并显示支持并发编程，Go原生地支持Unicode，可以处理所有国家的语言。Go静态类型语言，类型仅仅是一个编译时的概念。  
 <https://github.com/golang/go/wiki/NonEnglish>  
 
 - GOPATH目录可以是任意的，唯一的要求是`不能是你安装Go的目录`  
@@ -26,7 +26,9 @@ Go强类型化的语言，具有垃圾回收机制，并显示支持并编程，
 go游戏框架  
 <https://github.com/liangdas/mqant/wiki>
 
-- import “()”里的导入顺序最终会被gofmt工具按照字母顺序表进行排序  
+- import “()”里的执行顺序按照导入的先后顺序  
+- `同包`下的`不同 go 文件`，按照文件名“从小到大”排序顺序执行  
+- 一个包被其它多个包import，但只能被初始化一次  
 - range产生键值对，当不使用其中的键或者值要用"_"下划线表示（空标识符），Go不允许存在无用的临时变量  
 - range的for循环迭代顺序是随机（无序的）  
 - 格式化类型verb（动词），下表不完整还有更多  
