--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -1565,7 +1565,7 @@ int main(){
 #### shared_ptr
 智能指针的内部实现：  
 - 最终实现是`两个指针`成员：一个指向数据成员，一个指向计数器成员
-- 智能指针里的计数器维护的是一个指针，指向实际内存在对删，不是栈上的
+- 智能指针里的计数器维护的是一个指针，指向实际内存在堆上，不是栈上的
 
 #### weak_ptr  
 
