WIP：这是测试GO提交

--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -1051,8 +1051,10 @@ func main() {
 	fmt.Printf("%v, %[1]T\n", x.(int)) //10, int  直接断言x是int类型
 ```
 
+- flag.Parse() 命令行参数解析
+<https://www.jianshu.com/p/f9cf46a4de0e>
 
-- 使用flag.Value来解析参数（设置全局falg值period2，flag.Parse()接收命令行参数，操作flag值）
+- 使用flag.Value来解析参数（设置全局flag值period2，flag.Parse()接收命令行参数，操作flag值）
 
 ```go
 var period = flag.Duration("period2", 1 * time.Second, "sleep period")
@@ -1738,6 +1740,51 @@ func main() {
 }
 ```
 
+- Go互斥锁（sync.Mutex）和读写锁（sync.RWMutex）
+
+1.什么时候需要用到锁？  
+ 1）多个线程在读相同的数据时  
+ 2）多个线程在写相同的数据时  
+ 3）同一个资源，有读又有写  
+
+2.互斥锁控制资源的访问，每一个时刻只有一个线程能够拿到锁（不管读或者写）。
+
+```go
+package main
+import ("fmt"
+    "sync"
+)
+
+var (
+    count int
+    lock sync.Mutex
+)
+
+func main() {
+    for i := 0; i < 2; i++ {
+        go func() {
+            for i := 1000000; i > 0; i-- {
+                lock.Lock()
+                count ++
+                lock.Unlock()
+            }
+            fmt.Println(count)
+        }()
+    }
+
+    fmt.Scanf("\n")  //等待子线程全部结束
+}
+
+运行结果：
+1952533
+2000000  //最后的线程打印输出
+```
+3.在读多写少的环境下，共享资源的方式可采用读写锁（效率高，读可以多执行）  
+ 1）读获得锁后，写拿不到锁，但是另一个读线程可以拿到读锁  
+ 2）写获得锁，不管读或者写都拿不到锁，此时同互斥锁都作用。 
+
+4.锁的类型是一个`结构体类型`，属于值类型的一种，将它当作参数传给一个函数，将它从函数中返回，把它赋值给其他变量，让它进入某个管道，都会导致他的`副本的产生`，并且原值和副本以及多个副本之间是完全独立的，他们都是`不同`的互斥锁，所以不应该将锁通过函数的参数进行传递。  
+
 - 并发安全（考虑一个能在串行程序中正确工作的函数，如果这个函数在`并发调用时仍然能正确工作`，那么这个函数是并发安全。）
 - 竞态（多个goroutine按某些交错顺序执行时程序无法给出正确的结果）。数据竞态（发生于两个goroutine`并发读写`同一个变量且至少其中一个是写入时，比如：a写入200，同时b写入100，竞态最后只写入了200）。避免数据竞态的方式： 
     - 不要修改变量
@@ -2180,7 +2227,186 @@ db, err = sql.Open("mysql", dbname)		//ok
 db, err = sql.Open("sqlite3", dbname)	//错误，unknown driver "sqlite3"
 ```
 
+- Go调用C代码
+
+<https://www.jianshu.com/p/871727c2a82c>
+
+1.为什么调用C代码？  
+开源库和性能。
+
+2.C代码写到Go文件中使用注释方式（Go源码中的C代码需要`注释包裹`），最后import ”C“（注意这个语句必须的，且与上面的注释包裹的C代码不能有空行分隔）。编译这种Go文件与正常编译一致，只是实际过程Go调用了名为cgo的工具，cgo识别和读取go源文件中的C元素，并将其提取后交给C编译器编译，最后与go源码编译后的目标文件链接成一个可执行程序。注释包裹的作用就是可以让cgo识别并使用。
+
+```go
+package main
+ 
+// #include <stdio.h>
+// #include <stdlib.h>
+/*
+void print(char *str) {
+    printf("%s\n", str);
+}
+*/
+import "C"
+ 
+import "unsafe"
+ 
+func main() {
+    s := "Hello Cgo"
+    cs := C.CString(s)
+    C.print(cs) //直接在go中编写了c的print函数
+    C.free(unsafe.Pointer(cs))
+}
+```
+
+3.include头文件、动态链接库的写法（`cgo提供了#cgo指示符指定Go源码在编译后与哪些共享库进行链接`）：  
+
+<https://tonybai.com/2012/09/26/interoperability-between-go-and-c/>
+
+1）使用相对路径： #include "/header/header.h"
+2) 使用库地址（在Go中通过cgo LDFLAGS指明lib所在地址，通过CFLAGS指明include所在地址）：  
+\#cgo LDFLAGS: -L../../../../../shared/lib/ -lcloud_sdk_api  
+\#cgo CFLAGS: -I../../../../../shared/inc/cloud_api/  
+\#include "cloud_sdk_server_api.h"  
+
+
+```go
+// #cgo LDFLAGS: -L ./ -lfoo
+// #include <stdio.h>
+// #include <stdlib.h>
+// #include "foo.h"
+import "C"
+import "fmt“
+
+//以上cgo通过#cgo指示符告诉go编译链接当前目录下的libfoo共享库（我们可以构建共享库foo.h foo.c）
+
+func main() {
+    fmt.Println(C.count)
+    C.foo()
+}
+```
+
+3) 文件放到一起： foo.h  foo.c  main.go （里面include "foo.h"即可） 
+4) 编译：可以通过设置 CGO_CFLAGS, CGO_CPPFLAGS, CGO_CXXFLAGS, CGO_FFLAGS and CGO_LDFLAGS 环境变量，来设置C的编译参数
+
 ### 反射
+
+<https://www.jianshu.com/p/b46b1ccd2757>  
+
+1.每个interface变量都有一个对应的pair，pair记录了实际变量的值和类型。一个interface{}类型的变量包含了2个指针，一个指向值的类型，一个指向实际的值（concrete type）。`反射就是用来检测存储在接口变量内部（值value；类型concrete type）pair对的一种机制`。reflect.TypeOf()获取pair中的类型reflect.Type，reflect.ValueOf()获取pair中的值reflect.Value。  
+
+2。也就是说反射可以将“接口类型变量”转换为“反射类型对象”，反射类型指的是reflect.Type和reflect.Value这两种（注意不是Of）。当执行reflect.ValueOf(interface)之后，得到“relfect.Value”变量，可以通过本身的Interface（）方法获得接口变量的真实内容。  
+ 1）已知原有类型进行“强制转换”为原有真实类型（但需`注意类型要完全符合，当不符合是会出现panic`）。
+ realValue := value.Interface().(已知的类型)。
+ 
+ 2）未知原有类型，遍历探测其Field。
+
+```go
+package main
+
+import (
+    "fmt"
+    "reflect"
+)
+
+type User struct {
+    Id   int
+    Name string
+    Age  int
+}
+
+func (u User) ReflectCallFunc() {
+    fmt.Println("Allen.Wu ReflectCallFunc")
+}
+
+func main() {
+
+    user := User{1, "Allen.Wu", 25}
+
+    DoFiledAndMethod(user)
+
+}
+
+// 通过接口来获取任意参数，然后一一揭晓
+func DoFiledAndMethod(input interface{}) {
+
+    getType := reflect.TypeOf(input)
+    fmt.Println("get Type is :", getType.Name())
+
+    getValue := reflect.ValueOf(input)
+    fmt.Println("get all Fields is:", getValue)
+
+    // 获取方法字段
+    // 1. 先获取interface的reflect.Type，然后通过NumField进行遍历
+    // 2. 再通过reflect.Type的Field获取其Field
+    // 3. 最后通过Field的Interface()得到对应的value
+    for i := 0; i < getType.NumField(); i++ {
+        field := getType.Field(i)
+        value := getValue.Field(i).Interface()
+        fmt.Printf("%s: %v = %v\n", field.Name, field.Type, value)
+    }
+
+    // 获取方法
+    // 1. 先获取interface的reflect.Type，然后通过.NumMethod进行遍历
+    for i := 0; i < getType.NumMethod(); i++ {
+        m := getType.Method(i)
+        fmt.Printf("%s: %v\n", m.Name, m.Type)
+    }
+}
+
+运行结果：
+get Type is : User
+get all Fields is: {1 Allen.Wu 25}
+Id: int = 1
+Name: string = Allen.Wu
+Age: int = 25
+ReflectCallFunc: func(main.User)
+
+```
+
+ 3)reflect.Value是通过reflect.ValueOf(x)获得的，只有`当x是指针的时候`，才可以通过reflect.Value修改实际变量的值。(reflect.Value.Elem() 表示获取原始值对应的反射对象，只有原始值才能修改，当前反射对象是不能修改的)  
+
+```go
+package main
+
+import (
+    "fmt"
+    "reflect"
+)
+
+func main() {
+
+    var num float64 = 1.2345
+    fmt.Println("old value of pointer:", num)
+
+    // 通过reflect.ValueOf获取num中的reflect.Value，注意，参数必须是指针才能修改其值
+    pointer := reflect.ValueOf(&num)
+    newValue := pointer.Elem()
+
+    fmt.Println("type of pointer:", newValue.Type())
+    fmt.Println("settability of pointer:", newValue.CanSet())
+
+    // 重新赋值
+    newValue.SetFloat(77)
+    fmt.Println("new value of pointer:", num)
+
+    ////////////////////
+    // 如果reflect.ValueOf的参数不是指针，会如何？
+    pointer = reflect.ValueOf(num)
+    //newValue = pointer.Elem() // 如果非指针，这里直接panic，“panic: reflect: call of reflect.Value.Elem on float64 Value”
+}
+
+运行结果：
+old value of pointer: 1.2345
+type of pointer: float64
+settability of pointer: true
+new value of pointer: 77
+
+```
+
+3.Go reflect慢主要有2个原因：  
+ 1）涉及到内存分配以及后续的GC。
+ 2）reflect实现里面有大量的枚举，也就是for循环，比如类型之类的。
+ 
 
 - reflect.TypeOf函数接受任何的interface{}参数，并把接口中的`动态类型`以reflect.Type形式返回
 - reflect.ValueOf函数接受任意类型的interface{}并将接口的`动态值`以reflect.Value形式返回
@@ -2302,3 +2528,37 @@ tmp := uintptr(unsafe.Pointer(&x)) + unsafe.Offsetof(x.b)
 pb :=  (*int16)(unsafe.Pointer(tmp))
 *pb = 42
 ```
+
+####Go判断结构体是否实现了指定接口
+
+在go中想知道某个结构体（有人称为类）是否实现了某个接口类型，如下例子：  
+
+```go
+type IFace interface {
+    Eat() string
+}
+
+type Bird struct {
+    Eyes   string
+    Color  int
+}
+
+//要判断Bird是否实现了接口IFace做法
+var _ IFace = new(Bird) //定义变量类型是IFace，直接具体Bird给IFace赋值
+
+//或
+
+var _ IFace = (*Bird)(nil) //同样的方式，但这种方式不需要分配内存空间，上一种需要
+```
+
+
+
+
+
+
+
+
+
+
+
+
