这是测试提交分支

--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -2406,7 +2406,7 @@ new value of pointer: 77
 3.Go reflect慢主要有2个原因：  
  1）涉及到内存分配以及后续的GC。
  2）reflect实现里面有大量的枚举，也就是for循环，比如类型之类的。
- 
+
 
 - reflect.TypeOf函数接受任何的interface{}参数，并把接口中的`动态类型`以reflect.Type形式返回
 - reflect.ValueOf函数接受任意类型的interface{}并将接口的`动态值`以reflect.Value形式返回
@@ -2553,7 +2553,7 @@ var _ IFace = (*Bird)(nil) //同样的方式，但这种方式不需要分配内
 
 
 
-
+<!-- 说反射的非法所得分身乏术地方 -->
 
 
 
