--- a/_posts/2019-12-23-MySQL笔记.md
+++ b/_posts/2019-12-23-MySQL笔记.md
@@ -68,7 +68,75 @@ mysql> select @@tx_isolation;
 例子详解：  
 <https://www.cnblogs.com/wyaokai/p/10921323.html>
 
-  
+
+### 数据库回滚  
+
+回滚（Rollback）：指的是程序或数据处理错误，将程序或数据恢复到上一次正确状态的行为。回滚包括程序回滚和数据回滚等类型。（执行SQL-rollback-提交）  
+excute执行后，可以回滚  
+commit提交后，不可以回滚  
+
+撤销（undo）：在不影响其它事务运行到情况下，强行回滚该事务，撤销该事务已经做出的任何对数据库的修改。在提交之后执行。（执行SQL-提交-undo） 
+
+#### 数据库底层事务的提交和回滚的全过程
+
+例如insert操作，先在数据库当中生成一张临时表，临时表记录的`当前要插入的`一些字段的信息（不是全部），并且这张表会在当前数据库中看看是否还有相同的记录存在，如果有相同的记录违反唯一性约束规则，就会返回失败，这个时候回滚事务，并且给出相应的数据库报错信息。如果插入正常，插入结束后进行提交事务，把记录变更到真实存在的表当中去。最后再干掉生成的临时表。（临时表只在当前连接可见，当关闭连接时，mysql会自动删除表并释放所有空间。）  
+
+如果在程序中手动设置了数据库的事务的话，那么首先startTransaction，最后可以选择commit或者rollback，这里如果使用了rollback的话，则会撤销当前的所有操作，回到startTransaction的原点，不对数据库进行变更，临时表也会被删除掉。  
+
+
+### 备份
+
+- 热备：在数据库运行时，直接进行备份，对运行的数据库没有影响。  
+- 冷备：在数据库停止运行的时候进行备份，这种备份方式最为简单，只需要拷贝数据库物理文件即可。  
+- 温备：同样是在数据库运行的时候进行备份的，但对当前数据库的操作`会产生影响`。  
+
+1.热备份的缺点：  
+	1.1 尽量不要出错，否则后果会很严重  
+	1.2 如果热备份不成功，所得结果不可用于时间点的数据恢复  
+	1.3 维护的工作比较困难  
+
+2.冷备份的缺点：  
+	2.1 单独使用时，只能提供到“某一个时间点上”的恢复  
+	2.2 在实施备份的全过程中，数据库`必须是关闭状态`  
+	2.3 不能按表或按用户恢复  
+
+#### 物理备份
+
+（冷、热备份都属于物理备份）直接复制数据文件进行的备份。  
+
+优点：不需要其他的工具，直接复制就好，恢复直接复制备份文件即可  
+缺点：`与存储引擎有关`，跨平台能力较弱  
+
+#### 逻辑备份
+
+从数据库中导出数据另存而进行的备份  
+
+优点：能使用编辑器处理，恢复简单，能基于网络恢复，有助于避免数据损坏。  
+缺点：备份文件较大，备份较慢，`无法保证浮点数的精度`，使用逻辑备份数据恢复后，还`需要手动重建索引`，十分消耗CPU资源
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
