redis集群搭建方式

--- a/_posts/2019-09-05-Redis阅读笔记.md
+++ b/_posts/2019-09-05-Redis阅读笔记.md
@@ -85,3 +85,32 @@ tags: Redis 阅读笔记
     - 标签：blog标签
 - sorted set使用场景：
     - 排行榜：关键key排行
+
+#### 10.Redis集群搭建的三种方式
+
+<https://blog.csdn.net/e3002/article/details/100691472>
+
+- 单节点实例
+- 主从模式（master/slaver）（只需在redis.conf中配置<slaveof ip 端口>指明master的ip和端口号）  
+    - 1个mastre多个或者1个slaver  
+    - 默认master可以读写，slaver只能读，但可修改slaver为读（最好是不要，slaver写不会同步到其它slaver和master且会被master覆盖）
+    - master挂掉之后写服务将停止，但读可以通过其它的slaver（这是主从模式的致命问题）
+- 哨兵模式（sentinel）（对主从模式的优化，当master挂掉，就从slaver中选举一个作为master）
+    - sentinel也是一个进程，同样存在挂掉的情况，所以sentinel也会启动多个形成一个sentinel集群
+    - 一个sentinel或者sentinel集群可以管理多个主从redis
+    - 使用sentinel客户端不要直接连redis，而是连接sentinel的ip和port，由sentinel来提供具体的可提供服务的redis实现
+    - 这种模式处理的redis是单机多节点（sentinel最好跟redis处于不同的机器？）
+- 集群模式（cluster）（为满足上面2种模式单机数据量少的补充）
+
+
+
+
+
+
+
+
+
+
+
+
+
