高并发及mysql性能解读

--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -2260,9 +2260,17 @@ myMap = make(map[int]string) //创建集合，此时才能修改map
 - 实现error接口的错误处理
 
 ### 并发、channel
+
+<https://www.jianshu.com/u/947f3ccdd481>
+（effect go：https://golang.org/doc/effective_go.html#sharing ）
+
 - Go支持语言并发，通过go关键字开启goroutine
 - goroutine轻量级线程，调度由Golang运行时进行管理
 - goroutine两个之间传递通过channel（通道）
+
+#### 使用channel还是mutex解决并发？
+- channel在`数据流动`中解决并发的优先选择（流动的路径的就是channel，channel两端设计成goroutine）
+- mutex数据不动场景，缓存或者状态
 
 ### 包和工具
 
