--- a/_posts/2019-09-11-消息队列阅读笔记.md
+++ b/_posts/2019-09-11-消息队列阅读笔记.md
@@ -26,6 +26,36 @@ tags: 消息队列 阅读笔记
 RabbitMQ、RocketMQ、ActiveMQ、Kafka、ZeroMQ、MetaMq  
 数据库如Redis、Mysql以及phxsql也可实现消息队列  
 
+### go高并发
+
+<https://blog.csdn.net/baidu_39511645/article/details/80283261>
+
+有大规模请求（十万或者百万级qps），不需要立马知道结果，例如数据打点，文件的上传等等，这时候需要用到异步化处理，常用的方法有使用resque（redis？）、MQ、RabbitMQ等，go中使用goroutinue
+
+- 1.goroutinue无法控制产生数量（大规模爆发情景下内存暴涨，处理效率快速下降甚至引发程序崩溃）
+- 2.针对1的解决方案：缓冲队列（使用通道缓冲池，但也只是延缓了暴涨的时间，若请求速度远大于队列的处理速度，缓冲池很快被打满，后面的请求一样被堵塞） eg：
+
+```go
+	// 缓冲通道
+	var queue := make(chan job, MAX_QUEUE_SIZE)
+	go func(){
+		for{
+			select {
+				case job := <-queue:
+					job.Do(request)
+				case <- quit:
+					return
+			}
+		}
+	}
+
+
+	// 调用的goroutinue
+	job := &Job{request}
+	queue <- job
+
+````
+
 参考：  
 https://www.cnblogs.com/javalyy/p/8856731.html  
 http://developer.51cto.com/art/201904/595020.htm
