新增方法论

--- a/_posts/2019-09-05-Redis阅读笔记.md
+++ b/_posts/2019-09-05-Redis阅读笔记.md
@@ -17,7 +17,10 @@ tags: Redis 阅读笔记
 - 保证效率，redis定期持久化数据
 - 持久化方式：
     - RDB文件（快照）
-    - AOF文件（追加式文件） 
+    - AOF文件（追加式文件），3种写策略 
+        - always：每次写入均同步到AOF文件中，数据零误差，性能较低，不建议使用
+        - everysec：每秒将缓冲区中的指令同步到AOF文件中，数据准确性高，性能较高，也是默认选项，但宕机会存在1s数据丢失的问题
+        - no：由操作系统决定每次同步到AOF文件的周期，整合过程不可控
 
 ### 2.redis数据类型：string、hash、list、set和zset（sorted set：有序集合）
 
