--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -37,7 +37,7 @@ verb | 描述
 %x,%o,%b |十六进制，八进制，二进制数  
 %f,%g,%e |浮点数：如3.141593，3.141592653589793，3.141593e+00  
 %t		 |布尔型：true或者false  
-%c		 |字符（Unicode码点）  
+%c		 |字符（Unicode码点）  V
 %s		 |字符串  
 %q		 |带引号字符串（如"ABC"）或者字符（如'C'）  
 %v		 |内置格式的任何值  
@@ -1681,6 +1681,30 @@ func main() {
 
 - 缓冲通道（make的第2个参数指定缓冲大小，eg：make(chan int, 5)），缓冲通道实际上是一个队列。当队列满了以后通道一样阻塞
 
+- 通道赋值（只是把通道里面的值复制(包含通道当前的方向？)，不是地址的赋值，同其它一样，通道本身不是一个地址）
+
+```go
+func test(in chan int) chan int {
+    // <-in
+    ch2 := make(chan int)
+    go func() {
+        ch2 <- 11
+    }()
+    return ch2
+}
+
+func main() {
+    ch := make(chan int)
+    fmt.Println(&ch)
+    go func() {
+        ch <- 5
+    }()
+    ch = test(ch)
+
+    fmt.Println(<-ch, &ch)
+}
+```
+
 - 并行循环
 
 ```go
@@ -1705,7 +1729,7 @@ func makeThumnail(filenames <-chan string) int64 {
 	sizes := make(chan int64)
 	var wg sync.WaitGroup
 	for f := range filenames {
-		wg.Add(1)
+		wg.Add(1) // add的位置注意
 		go func(f string) {
 			defer wg.Done() //保证一定会调用
 			x, err := test()
@@ -2058,6 +2082,73 @@ func (e *entry) deliver(response chan<- result) {
 }
 ```
 
+- 用互斥锁保护一个数值型的共享资源麻烦且效率低下，标准库的sync/atomic包对原子操作提供了丰富的支持
+
+```go
+package main
+
+import (
+    "fmt"
+    "sync"
+    "sync/atomic"
+)
+
+var total uint64
+
+func worker(wg *sync.WaitGroup) {
+    defer wg.Done()
+
+    for i := uint64(0); i <= 100; i++ {
+        atomic.AddUint64(&total, i)
+    }
+}
+
+func main() {
+    var wg sync.WaitGroup
+    wg.Add(2)
+
+    go worker(&wg)
+    go worker(&wg)
+    wg.Wait()
+
+    fmt.Println(total)
+}
+```
+
+- 原子操作配合互斥锁可以实现非常高效的单件模式（单例模式），互斥锁的代价比普通整数的原子读写个高很多，在性能敏感的地方可以增加一个数字型的标志位，通过原子检测标志位状态降低互斥锁的使用次数来提供性能。(及sysnc.Once的实现？)
+
+```go 
+import (
+    "sync"
+    "sync/atomic"
+)
+
+// 自定义的数据结构体
+type singleton struct{}
+
+var (
+    instance    *singleton
+    initialized uint32
+    mu          sync.Mutex
+)
+
+func Instance() *singleton {
+    if atomic.LoadUint32(&initialized) == 1 { // 用原子操作先做一层处理，减少互斥锁的使用
+        return instance
+    }
+
+    mu.Lock()
+    defer mu.Unlock()
+
+    if instance == nil { // 加锁时可能其它操作已经改变该值？
+        defer atomic.StoreUint32(&initialized, 1)
+
+        instance = &singleton{}
+    }
+    return instance
+}
+```
+
 - goroutine与操作系统线程的差别
     - **栈增长方式**：
         - `goroutine是可增长的栈`。典型情况下初始大小2kb，栈可动态扩容到1GB，按需增大和缩小。
@@ -2268,7 +2359,38 @@ myMap = make(map[int]string) //创建集合，此时才能修改map
 - goroutine轻量级线程，调度由Golang运行时进行管理
 - goroutine两个之间传递通过channel（通道）
 
-#### 使用channel还是mutex解决并发？
+#### 使用channel还是mutex解决并发？（顺序一致性内存模型（保障事件顺序执行））
+
+1.通过同步原语来给两个事件明确排序：
+
+```go
+    func main() {
+        done := make(chan int)
+        go func() {
+            println("hello,world")
+            done <- 1
+        }()
+
+        <-done // channel取值等待值
+    }
+```
+
+2.通过sync.Mutex互斥量实现同步：
+
+```go
+func main() {
+    var mu sync.Mutex
+    mu.Lock()
+    go func(){
+        println("hello,world")
+        mu.Unlock()
+    }()
+
+    mu.Lock() // 这个必定等待Unlock之后才会执行（sync.Mutex保证），此后main结束，锁GC？
+}
+```
+
+
 - channel在`数据流动`中解决并发的优先选择（流动的路径的就是channel，channel两端设计成goroutine）
 - mutex数据不动场景，缓存或者状态
 
@@ -2665,6 +2787,133 @@ func main() {
     }(timer1)
 
     time.Sleep(15 * time.Second)
+}
+
+```
+
+##### 发布/订阅模式
+```go 
+package main
+
+import (
+    "fmt"
+    "strings"
+    "sync"
+    "time"
+)
+
+type (
+    subscriber chan interface{}         // 订阅者为一个通道
+    topicFunc  func(v interface{}) bool // 主题为一个过滤器
+)
+
+// 发布者对象
+type Publisher struct {
+    m          sync.RWMutex
+    buffer     int
+    timeout    time.Duration            // 发布超时时间
+    subsribers map[subscriber]topicFunc // 订阅者信息
+}
+
+// 构建一个发布者对象，可以设置发布超时时间和缓存队列的长度
+func NewPublisher(publishTimeout time.Duration, buffer int) *Publisher {
+    return &Publisher{
+        buffer:     buffer,
+        timeout:    publishTimeout,
+        subsribers: make(map[subscriber]topicFunc),
+    }
+}
+
+// 添加一个新的订阅者，订阅全部主题
+func (p *Publisher) Subscirbe() chan interface{} {
+    return p.SubscribeTopic(nil)
+}
+
+// 添加一个新的订阅者，订阅过滤器筛选后的主题
+func (p *Publisher) SubscribeTopic(topic topicFunc) chan interface{} {
+    ch := make(chan interface{}, p.buffer)
+    p.m.Lock()
+    p.subsribers[ch] = topic
+    p.m.Unlock()
+    return ch
+}
+
+// 退出订阅
+func (p *Publisher) Evict(sub chan interface{}) {
+    p.m.Lock()
+    defer p.m.Unlock()
+
+    delete(p.subsribers, sub)
+    close(sub)
+}
+
+// 发布一个主题
+func (p *Publisher) Publish(v interface{}) {
+    p.m.RLock()
+    defer p.m.RUnlock()
+
+    var wg sync.WaitGroup
+    for sub, topic := range p.subsribers {
+        wg.Add(1)
+        go p.sendTopic(sub, topic, v, &wg)
+    }
+
+    wg.Wait()
+}
+
+// 发送主题，可以容忍一定的超时
+func (p *Publisher) sendTopic(sub subscriber, topic topicFunc, v interface{}, wg *sync.WaitGroup) {
+    defer wg.Done()
+
+    if topic != nil && !topic(v) {
+        return
+    }
+
+    select {
+    case sub <- v:
+    case <-time.After(p.timeout):
+    }
+}
+
+// 关闭发布者对象，同时关闭所有的订阅者通道
+func (p *Publisher) Close() {
+    p.m.Lock()
+    defer p.m.Unlock()
+
+    for sub := range p.subsribers {
+        delete(p.subsribers, sub)
+        close(sub)
+    }
+}
+
+func main() {
+    p := NewPublisher(100*time.Millisecond, 10)
+    defer p.Close()
+
+    all := p.Subscirbe()
+    golang := p.SubscribeTopic(func(v interface{}) bool {
+        if s, ok := v.(string); ok {
+            return strings.Contains(s, "golang")
+        }
+
+        return false
+    })
+
+    p.Publish("hello world")
+    p.Publish("hello golang!")
+    go func() {
+        for msg := range all {
+            fmt.Println("all:", msg)
+        }
+    }()
+
+    go func() {
+        for msg := range golang {
+            fmt.Println("golang:", msg)
+        }
+    }()
+
+    time.Sleep(3 * time.Second)
 }
 
 ```
