--- a/_posts/2019-10-16-设计模式.md
+++ b/_posts/2019-10-16-设计模式.md
@@ -286,7 +286,7 @@ int main(){
 
 ```  
 
-### <span id = "list_2"></span>单例模式  
+### <span id = "list_2"></span>单例模式（单件模式）  
 
 只能有一个`实例`，并且提供全局访问这个实例的接口  
 
