--- a/_posts/2019-10-29-进程间通信.md
+++ b/_posts/2019-10-29-进程间通信.md
@@ -22,6 +22,8 @@ tags: 进程间通信 阅读笔记
 
 ### <span id = "list_0"></span> 多进程  
 
+- CSP（Communicating Sequential Process，通信顺序进程）
+
 #### 创建进程  
 
 - Linux系统创建进程的方式有2种，由`操作系统创建`，还有就是`由父进程创建`（通常是子进程）。系统调用fork()创建一个新进程，vfork()也可创建，但vfork()实际也是调用fork()函数。  
