cgo生成的中间文件

--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -2492,6 +2492,61 @@ func main() {
 
 3) 文件放到一起： foo.h  foo.c  main.go （里面include "foo.h"即可） 
 4) 编译：可以通过设置 CGO_CFLAGS, CGO_CPPFLAGS, CGO_CXXFLAGS, CGO_FFLAGS and CGO_LDFLAGS 环境变量，来设置C的编译参数
+5) CGO将当前包引用的C语言符号都放到了虚拟的C包中，同时当前包依赖的其它Go语言包内部可能也通过CGO引入了相似的虚拟C包，但是不同的Go语言包引入的虚拟的C包之前的类型是不能通用的。（不同的Go包，引入的C包是不同的内存空间，对于Go来说就是不同的包空间，以下例子中cgo_helper.C与main.C是不同的，那么mian中调用PrintCString也就不合法了）
+6) CGO在两个不同的Go语言包中，存在一个同名的要导出为C语言函数的add()函数，那么在最终的链接阶段将会出现重名的问题（与C转Go不同）。导出文件`为_cgo_export.h文件`，存C源文件要引用需要导出文件导出后才能使用。
+7）导出C语言接口时，需要保证函数的参数和返回值类型都是C语言友好的类型，同时`返回值不得直接或间接包含Go语言内存空间的指针`。
+
+![cgo生成的中间文件](https://www.processon.com/view/link/5ee9d9a81e085326372faa6e)
+
+```Go
+package cgo_helper
+
+//#include<stdio.h>
+import "C"
+
+type CChar C.char
+
+func (p *CChar) GoString() string {
+    return C.GoString((*C.char)(p))
+}
+
+func PrintCString(cs *C.Char) {
+    C.puts(cs)
+}
+
+
+package main
+//static const char* cs = "hello";
+import "C"
+
+import (
+    "cgo_helper"
+)
+
+func main() {
+    cgo_helper.PrintCString(C.cs)
+}
+
+```
+
+```go
+package main
+
+// static int noreturn(){
+//  return 0;
+// }
+import "C"
+
+import (
+    "fmt"
+)
+
+func main() {
+    v, _ := C.noreturn()
+    fmt.Printf("%#T", v) // main._Ctype_int
+}
+
+````
 
 ### 反射
 
