--- a/_posts/2019-09-02-数据库查询优化.md
+++ b/_posts/2019-09-02-数据库查询优化.md
@@ -62,6 +62,8 @@ CREATE TABLE `vip` (
 show index from vip;
 ````
 
+3. 索引对多个值进行排序的依据是CREATE TABLE语句中定义索引时列的顺序
+
 ### 优化性能方面：
 
 1. 使索引弱化掉的操作
@@ -76,3 +78,4 @@ show index from vip;
 
 <https://cloud.tencent.com/developer/article/1342673>
 <>
+
