--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -242,6 +242,13 @@ const(
     - make([]T,len,cap) 和make([]T,cap)[:len]二者等价（注意cap位置）  
     - append方式类似c++中verctor的动态扩容方式（`内存地址变化了`）  
     - s1 = append(s1[0:3], s2[:]...) //s1保留0 ~ 2这3个数据，`剩余数据全部弃用`，然后追加s2的所有元素  
+    - input[low:high:max]，其中low 和 high 和一般切片表达式的用法一样，那么运算后的切片cap为：max — low。
+        完整切片巧妙用法：   
+        p := append(t[:0:0], t...)  
+
+        相当于：
+        p := make([]int,len(t))
+        copy(p,t)
 
 ```go
 arr := [...]string{"Sunday","Monday","Tuesday","Wednesday","Thursday","Firday","Saturday","",""}
@@ -2496,6 +2503,7 @@ func main() {
 6) CGO在两个不同的Go语言包中，存在一个同名的要导出为C语言函数的add()函数，那么在最终的链接阶段将会出现重名的问题（与C转Go不同）。导出文件`为_cgo_export.h文件`，存C源文件要引用需要导出文件导出后才能使用。
 7）导出C语言接口时，需要保证函数的参数和返回值类型都是C语言友好的类型，同时`返回值不得直接或间接包含Go语言内存空间的指针`。
 
+8）CGO生成的中间文件的简单示意图。包中有4个go文件，nocgo开头的是没有import "C"指令的非cgo文件，mian.go和hello.go是有import "C"的包含CGO代码的go文件，cgo命令会为每个包含cgo代码的go文件创建2个中间文件（main_cgo1.go main_cgo2.c）(hello_cgo1.go hello_cgo2.c)。然后为整个包创建一个Go文件（_cgo_gotypes.go），其中包含Go语言部分辅助代码，此外还会创建一个（_cgo_export.h）文件和一个（_cgo_export.c）文件，对应Go语言导出到C语言的类型和函数
 ![cgo生成的中间文件](https://www.processon.com/view/link/5ee9d9a81e085326372faa6e)
 
 ```Go
@@ -2547,6 +2555,8 @@ func main() {
 }
 
 ````
+
+9) cgo内存模型：C语言的内存在`分配之后就是稳定的`，但是Go语言函数栈的动态伸缩可能导致栈中内存地址的移动（这是Go和内存模型的最大差异）。因此C访问Go内存空间是不安全的，Go访问C内存空间是安全。在cgo调用的C语言函数返回前，cgo保证传入的go语言内存在此期间不会发生移动，c语言可以大胆的使用go语言的内存（`不过需要小心的是，在取得Go内存后需要马上传入C语言函数，不能保存到临时变量后再间接传入C语言函数。因为cgo只能保证在c函数调用之后被传入的Go语言内存不会反生移动，并不能保证在传入C函数之前内存不发生变化`）。
 
 ### 反射
 
