--- a/_posts/2019-10-29-IO模型阅读笔记.md
+++ b/_posts/2019-10-29-IO模型阅读笔记.md
@@ -16,6 +16,7 @@ tags: I/O模型 阅读笔记
 - [信号驱动I/O](#list_3)
 - [异步I/O](#list_4)
 - [I/O模型对比](#list_5)
+- [select、poll和epoll](#list_6)
 
 ---
 
@@ -72,3 +73,15 @@ Linux I/O复用有`select poll epoll三组系统调用方式`，进程通过将`
 ![五种I/O对比](https://github.com/smakry/smakry.github.io/raw/master/imags/%E4%BA%94%E7%A7%8DIO%E5%AF%B9%E6%AF%94.png)  
 
 <https://blog.csdn.net/gui951753/article/details/82348485>  
+
+### <span id = "list_6"></span> select、poll和epoll
+
+<https://www.processon.com/diagraming/5e7c7617e4b03b9965380dae>
+
+系统调用	select	poll	epoll
+事件集合	用户通过3个参数分别传入感兴趣的可读、可写及异常等事件，内核通过对这些参数的在线修改来反馈其中的就绪事件，这使得用户每次调用select都要重置这3个参数	统一处理所有事件类型，因此只需要一个事件集参数，用户通过pollfd.events传入感兴趣的事件，内核通过修改pollfd.revents反馈其中就绪的事件	内核通过一个事件表直接管理用户感兴趣的所有事件，因此每次调用epoll_wait时，无须反复传入用户感兴趣的事件，epoll_wait系统调用的参数events仅用来反馈就绪的事件
+应用程序索引就绪文件描述符的时间复杂度	O(n)	O(n)	O(1)
+最大支持文件描述符数	一搬有最大值限制	65535（基于链表存储，没有最大连接数的限制）	65535
+工作模式	LT（处于可用状态一直通知用户）	LT	支持ET高效模式（状态发生变化时才通知）
+内核实现和工作效率	采用轮询方式来检测就绪事件	采用轮询方式来检测就绪事件	采用回调方式来检测就绪队列事件
+
