--- a/_posts/2019-12-23-MySQL笔记.md
+++ b/_posts/2019-12-23-MySQL笔记.md
@@ -196,6 +196,15 @@ OLTP：在线事务处理
 系统预热（warm up）的过程：系统重启后需要多长时间才能达到正常的性能容量。在重启后，缓存是冷的，还没有数据。
 
 
+### 索引解读
+
+- 如果查询中的列不是独立的，则Mysql就不会使用索引。“独立的列”是索引列不能是表达式的一部分，也不能是函数的参数。例如：
+mysql> select actor_id from sakila.actor where actor_id + 1 = 5; 
+Mysql无法自动解析这个方程式，所以索引无效，最好的习惯是将索引列放到单独的一列，actor_id = 4  
+
+以下同样问题：  
+mysql> select ... where TO_DAYS(CURRENT_DATE) - TO_DAYS(date_col) <= 10;  
+
 
 
 
